<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Stock Hawk</string>

    <!--<string name="action_example">Example action</string>-->

    <string name="action_settings">Settings</string>
    <string name="action_change_units" translatable="false">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="no_network_title">No Network</string>
    <string name="no_network_content">Stock quotes are out of date. Please connect to network. </string>
    <string name="chart_description">Stock close price</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <!--<string name="appwidget_text">EXAMPLE</string>-->
    <!--<string name="add_widget">Add widget</string>-->
    <!--Content Description-->
    <string name="a11y_symbol">Symbol: <xliff:g id="symbol">>%1$s</xliff:g></string>
    <string name="a11y_bidPrice">Bid Price <xliff:g id="bidPrice">>%1$s</xliff:g></string>
    <string name="a11y_change">Change  <xliff:g id="change">>%1$s</xliff:g></string>
    <string name="a11y_week">week</string>
    <string name="a11y_month">month</string>
    <string name="a11y_sixMonth">six month</string>
    <string name="a11y_year">year</string>
    <string name="a11y_add_stock">Add Stock</string>


    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="six_months">Six Months</string>
    <string name="year">Year</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="stock_is_saved">"This stock is already saved!"</string>
    <string name="stock_not_found">"Symbol Not Found"</string>
</resources>
