<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    app:paddingEnd="@dimen/activity_horizontal_margin"
    tools:context="com.sam_chordas.android.stockhawk.ui.DetailActivity"
    android:orientation="vertical">
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:layout_height="@dimen/md_button_height"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/week"
            android:contentDescription="@string/a11y_week"
            android:text="@string/week"
            android:onClick="getHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/month"
            android:contentDescription="@string/a11y_month"
            android:text="@string/month"
            android:onClick="getHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"

            android:id="@+id/sixMonths"
            android:contentDescription="@string/a11y_sixMonth"
            android:text="@string/six_months"
            android:onClick="getHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/year"
            android:text="@string/year"
            android:contentDescription="@string/a11y_year"
            android:onClick="getHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>
